Fix overall spacings, and fix footer on mobile.

--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 /******************************************************************/
 body         { font-family: 'Georgia', serif; font-size: 18px; line-height: 1.4em; color: #000; }
 p            { margin: 0; }
-hr           { height: 1px; border: 0; border-top: 1px solid gainsboro; margin: 15px 0; }
+hr           { height: 1px; border: 0; border-top: 1px solid gainsboro; margin: 12px 0; }
 h1, h2       { font-family: 'Garamond', 'Georgia', serif; font-weight: normal; }
-h1           { font-size: 40px; margin: 20px 0; }
+h1           { font-size: 50px; margin: 30px 0; }
 h2           { font-size: 30px; margin: 10px 0; }
 ul           { list-style-position: inside; padding-left: 0; margin: 10px 0 5px 0; }
-.box         { width: 540px; margin: 40px auto; }
+.box         { width: 540px; margin: 40px auto 0 auto;  }
 .intro       { position: relative; overflow: auto; }
 .intro a     { color: #004B8B; text-decoration: none; }
 .intro a:hover    { color: #777; }
@@ -25,5 +25,5 @@ ul           { list-style-position: inside; padding-left: 0; margin: 10px 0 5px 
     position: relative;
     width: 100%;
     color: grey;
-    padding-bottom: 0;
+    margin-top: 50px;
 }
